# COMP371

./: CMakeLists.txt  README.md  README.txt  report.txt
data/: NOTE
shaders/: blended.frag  blended.vert  blended_light.frag  blended_light.vert  generic.frag  generic.vert  shadow.frag  texture.frag  texture.vert
src/: AnimationHandler.cpp  AnimationHandler.hpp  Camera.cpp  Camera.hpp  Light.hpp  PNGLoader.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderGuard.hpp  TextureGuard.hpp  VAOGuard.hpp  Window.cpp  Window.hpp  main.cpp  shader.cpp  shader.hpp
src/models/: IRenderNode.cpp  IRenderNode.hpp  SceneRoot.hpp  TestSquareObject.cpp  TestSquareObject.hpp
src/objects/: AxisLines.cpp  AxisLines.hpp  AxisLinesObject.cpp  AxisLinesObject.hpp  Cube.cpp  Cube.hpp  CubeObject.cpp  CubeObject.hpp  FloorGrid.cpp  FloorGrid.hpp  FloorGridObject.cpp  FloorGridObject.hpp  Horse.cpp  Horse.hpp  HorseObject.cpp  HorseObject.hpp  IRenderAxisNode.cpp  IRenderAxisNode.hpp  IRenderNode.cpp  IRenderNode.hpp  IRenderObject.cpp  IRenderObject.hpp  LightObject.hpp  SceneRoot.hpp  TestCubeObject.cpp  TestCubeObject.hpp  TestSquare.cpp  TestSquare.hpp  TestSquareObject.cpp  TestSquareObject.hpp  TestTriangleObject.cpp  TestTriangleObject.hpp
